# bridle-recording

./: .gitignore  AGENTS.md  Cargo.toml  README.md
agent-home/: README.md
agent-home/claude/: bridle-profile.toml  recorder-settings.json
agent-home/codex-http/: bridle-profile.toml  config.toml
agent-home/codex-websocket/: bridle-profile.toml  config.toml
docs/: product-direction.md
docs/prototypes/: session-observability.html
docs/user/: 01-project-overview.md  02-proxy-usage.md  03-recording-and-ui.md  04-testset-integration.md
scripts/: run-claude.sh  run-codex-http.sh  run-codex-websocket.sh  run-recorder.sh
src/: app.rs  constants.rs  help.rs  http_proxy.rs  main.rs  matcher.rs  observability.rs  observability_ui.html  replay.rs  sse.rs  tests.rs  types.rs  util.rs  websocket_proxy.rs
src/observability/: api.rs  claude.rs  codex.rs  mod.rs  prompt.rs  recording.rs  sse.rs  tests.rs  testset.rs  ui.html  ui.rs
src/observability/testset/: export.rs  transform.rs
src/proxy/: http.rs  mod.rs  replay.rs  websocket.rs
src/recording/: filesystem.rs  mod.rs
testsets/claude/758d61f26a44448384e5c4468a0dcb7a2abe456067b0f7b505bc28b9411fe931/: testset.json
testsets/claude/758d61f26a44448384e5c4468a0dcb7a2abe456067b0f7b505bc28b9411fe931/raw/e3040a32-5446-4762-984a-4fca12512ddd/: manifest.json
testsets/codex-http/ea3cdaacff6a7a4270ec9b69415b2793db6e67978602b59f5588e620d621ef67/: testset.json
testsets/codex-http/ea3cdaacff6a7a4270ec9b69415b2793db6e67978602b59f5588e620d621ef67/raw/019f2a24-f268-7eb0-8518-10375ab58b97/: manifest.json
(+30 files in other folders)
