[package]
name = "bridle-recording"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = { version = "0.7", features = ["ws"] }
base64 = "0.22"
bytes = "1.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
http-body = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.40", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal"] }
tokio-socks = "0.5"
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
zstd = "0.13"

[dev-dependencies]
tempfile = "3.15"
tower = "0.5"
